Squashed 'template/' changes from a28b4db..0a710d4
0a710d4 Refactor directory and template structure for improved organization and maintainability. Update script logic to align with new paths. Add project initialization enhancements, including virtual environment setup scripts (`configure.sh` and `configure.psw`) and automatic app module creation in `initialize_project.py`.

git-subtree-dir: template
git-subtree-split: 0a710d4b360db78d2975a33f0be8fafe813e9b4f

--- a/.resources/templates/cmake/lib_CMakeLists.txt.jinja
+++ b/.resources/templates/cmake/lib_CMakeLists.txt.jinja
@@ -9,7 +9,7 @@ configure_build({{ target_name }})
 add_library({{ target_name }}  {{"${" + sources + "}"}} {{"${" + headers + "}"}} {{"${" + resources + "}"}})
 
 # Include headers directory
-target_include_directories({{ target_name }} PRIVATE ${{CMAKE_CURRENT_SOURCE_DIR}}/include/{{ target_name }})
+target_include_directories({{ target_name }} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/{{ target_name }})
 
 # Link libraries
 #target_link_libraries({{ target_name }} PRIVATE)
