--- a/template/.resources/templates/c++/class_template.cpp.jinja
+++ b/template/.resources/templates/c++/class_template.cpp.jinja
@@ -1,7 +1,7 @@
 #include "{{ header_filename }}"
 
 {% if namespace -%}
-using namespace {{ namespace }} {
+using namespace {{ namespace }};
 {% endif %}
 
 {{ class_name }}::{{ class_name }}() {
