--- a/template/.resources/templates/cmake/CMakeLists.txt.jinja
+++ b/template/.resources/templates/cmake/CMakeLists.txt.jinja
@@ -1,10 +1,12 @@
-include(cmake/common.cmake)
-message(STATUS "{{ project_name}} by {{ org_name | default('UnknownOrg') }} - {{ project_version | default('1.0.0') }}")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+include(Common OPTIONAL)
+get_version(${CMAKE_SOURCE_DIR}/project.json PROJECT_VERSION)
+message(STATUS "{{ project_name}} by {{ org_name | default('UnknownOrg') }} - ${PROJECT_VERSION}")
 cmake_minimum_required(VERSION {{ cmake_min_version | default("3.23") }})
 
 project({{ project_name }}
-    VERSION {{ project_version | default("1.0.0") }}
-    DESCRIPTION "{{ project_description | default('Monorepo project') }}"
+    VERSION ${PROJECT_VERSION}
+    DESCRIPTION "{{ project_description | default('MyProject') }}"
     LANGUAGES CXX
 )
 
