--- a/template/.resources/templates/cmake/app_CMakeLists.txt.jinja
+++ b/template/.resources/templates/cmake/app_CMakeLists.txt.jinja
@@ -1,7 +1,7 @@
 # Include common cmake scripts
 include(${CMAKE_CURRENT_SOURCE_DIR}/.cmake/sources.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
-
+show_module_info(${CMAKE_CURRENT_LIST_DIR}/package.json)
 # Configure build output directories for the target
 configure_build({{ target_name }})
 
@@ -9,8 +9,8 @@ configure_build({{ target_name }})
 add_executable({{ target_name }}  {{"${" + sources + "}"}} {{"${" + headers + "}"}} {{"${" + resources + "}"}})
 
 # Include headers directory
-target_include_directories({{ target_name }} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/{{ target_name }})
-
+target_include_directories({{ target_name }} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+set_target_properties({{ target_name }} PROPERTIES FOLDER "Applications")
 # Link libraries
 #target_link_libraries({{ target_name }} PRIVATE)
 
