--- a/template/.resources/templates/cmake/lib_CMakeLists.txt.jinja
+++ b/template/.resources/templates/cmake/lib_CMakeLists.txt.jinja
@@ -1,7 +1,7 @@
 # Include common cmake scripts
 include(${CMAKE_CURRENT_SOURCE_DIR}/.cmake/sources.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
-
+show_module_info(${CMAKE_CURRENT_LIST_DIR}/package.json)
 # Configure build output directories for the target
 configure_build({{ target_name }})
 
@@ -9,15 +9,22 @@ configure_build({{ target_name }})
 add_library({{ target_name }}  {{"${" + sources + "}"}} {{"${" + headers + "}"}} {{"${" + resources + "}"}})
 
 # Include headers directory
-target_include_directories({{ target_name }} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/{{ target_name }})
+target_include_directories({{ target_name }}
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/{{ target_name }}
+)
 
 # Link libraries
 #target_link_libraries({{ target_name }} PRIVATE)
+set_target_properties({{ target_name }} PROPERTIES FOLDER "Libraries")
 
 # Enable testing if tests exist
 include(CTest)
 if(BUILD_TESTING)
-    add_subdirectory(test/{{ target_name }})
+    add_subdirectory(test/)
 endif()
 # Install target
 configure_install({{ target_name }})
