--- a/.resources/templates/cmake/test_CMakeLists.txt.jinja
+++ b/.resources/templates/cmake/test_CMakeLists.txt.jinja
@@ -5,12 +5,17 @@ find_package(GTest REQUIRED)
 
 configure_build({{test_target}})
 
+# Include directories
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include/{{target_name}}
+)
+
 # Add test executable
 add_executable({{test_target}} {{"${"+sources+"}"}})
 
 # Link libraries
 target_link_libraries({{test_target}} PRIVATE GTest::gtest)
-set_target_properties({{ target_name }} PROPERTIES FOLDER "Test")
+
 #auto discover tests
 gtest_discover_tests({{test_target}}
     DISCOVERY_TIMEOUT 60
