--- a/template/.resources/templates/docs/doxyfile_template.jinja
+++ b/template/.resources/templates/docs/doxyfile_template.jinja
@@ -4,6 +4,7 @@
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = "{{ project_name }}"
+PROJECT_NUMBER         = "{{ project_version }}"
 PROJECT_BRIEF          = "{{ project_description }}"
 OUTPUT_DIRECTORY       = out
 CREATE_SUBDIRS         = NO
