--- a/template/.resources/templates/cmake/app_CMakeLists.txt.jinja
+++ b/template/.resources/templates/cmake/app_CMakeLists.txt.jinja
@@ -1,6 +1,6 @@
 # Include common cmake scripts
 include(${CMAKE_CURRENT_SOURCE_DIR}/.cmake/sources.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
+
 show_module_info(${CMAKE_CURRENT_LIST_DIR}/package.json)
 # Configure build output directories for the target
 configure_build({{ target_name }})
@@ -10,6 +10,12 @@ add_executable({{ target_name }}  {{"${" + sources + "}"}} {{"${" + headers + "}
 
 # Include headers directory
 target_include_directories({{ target_name }} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+get_name(${CMAKE_CURRENT_LIST_DIR}/package.json PROGRAM_NAME)
+get_version(${CMAKE_CURRENT_LIST_DIR}/package.json PROGRAM_VERSION)
+configure_file(
+        ${CMAKE_CURRENT_LIST_DIR}/config.h.in
+        ${CMAKE_CURRENT_LIST_DIR}/include/config.h
+)
 set_target_properties({{ target_name }} PROPERTIES FOLDER "Applications")
 # Link libraries
 #target_link_libraries({{ target_name }} PRIVATE)
